Use sync instead of umount.

--- a/recipes-core/systemd/systemd-units/fwu-usb.service
+++ b/recipes-core/systemd/systemd-units/fwu-usb.service
@@ -7,4 +7,4 @@ Wants=led.service
 [Service]
 Type=simple
 ExecStartPre=/bin/sleep 5
-ExecStart=/etc/scripts/fwu-usb.sh start
+ExecStart=/etc/scripts/fwu-usb.sh
