blacklisted gpio-expander driver gpio-pca953x and added interrupt support

--- a/recipes-kernel/linux/linux-mainline/i2c-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/i2c-devices.cfg
@@ -7,3 +7,4 @@ CONFIG_BMP280_SPI=n
 # TCA6416
 # https://cateee.net/lkddb/web-lkddb/GPIO_PCA953X.html
 CONFIG_GPIO_PCA953X=m
+CONFIG_GPIO_PCA953X_IRQ=y
