--- a/recipes-connectivity/bluez5/bluez5/main.conf
+++ b/recipes-connectivity/bluez5/bluez5/main.conf
@@ -86,4 +86,4 @@ Name = STROMER
 # AutoEnable defines option to enable all controllers when they are found.
 # This includes adapters present on start as well as adapters that are plugged
 # in later on. Defaults to 'false'.
-AutoEnable=true
+#AutoEnable=false
