--- a/recipes-core/systemd/systemd-units/usb.service
+++ b/recipes-core/systemd/systemd-units/usb.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=usb
-After=gpio.service pwr-sup.service
-Requires=gpio.service pwr-sup.service
+After=gpio.service
+Requires=gpio.service
 
 [Service]
 Type=oneshot
