Set default timeouts to 30s.

--- a/recipes-core/systemd/systemd/system.conf
+++ b/recipes-core/systemd/systemd/system.conf
@@ -9,3 +9,6 @@
 [Manager]
 RuntimeWatchdogSec=10
 ShutdownWatchdogSec=1min
+DefaultTimeoutStartSec=30
+DefaultTimeoutStopSec=30
+DefaultRestartSec=30
