--- a/recipes-core/systemd/systemd-units/fwu-usb.service
+++ b/recipes-core/systemd/systemd-units/fwu-usb.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=fwu-usb
-After=mnt-rfs.service zram.service
-Requires=mnt-rfs.service zram.service
+After=mnt-rfs.service
+Requires=mnt-rfs.service
 Wants=led.service
 
 [Service]
