Always show systemd status messages.

--- a/recipes-core/systemd/systemd/system.conf
+++ b/recipes-core/systemd/systemd/system.conf
@@ -7,6 +7,7 @@
 #   watchdog is not contacted within the specified interval during rebooting.
 
 [Manager]
+ShowStatus=yes
 RuntimeWatchdogSec=10
 ShutdownWatchdogSec=1min
 DefaultTimeoutStartSec=30
