- Do not reload gsm service anymore in order to give module enough time to gain reception. - Also added some additional AT commands for debugging. - And use by Swisscom recommended dial command.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -1,12 +1,21 @@
 [Dialer Defaults]
 Modem = /dev/ttyACM0
 Baud = 9600
-Phone = *99#
+Phone = *99***1#
 Username = user
 Password = pass
 Init1 = ATZ
-Init2 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
+Init2 = ATE0
+Init3 = AT+GMI;+GMM;+GMR
+Init4 = ATI9
+Init5 = AT+KGSN=2;+KGSN=3;+CIMI
+Init6 = AT+COPS?
+Init7 = AT+KBND?;+KCELL=0
+Init8 = AT+CSQ
+Init9 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
+Dial Command = ATD
 Stupid Mode = 1
+PPPD Option = debug
 
 [Dialer swisscom]
 Modem = /dev/ttyUSB0
