Build overlay filesystem as Kernel module.

--- a/recipes-kernel/linux/linux-mainline/filesystems.cfg
+++ b/recipes-kernel/linux/linux-mainline/filesystems.cfg
@@ -1,6 +1,8 @@
 # https://cateee.net/lkddb/web-lkddb/EXT2_FS.html
 # https://cateee.net/lkddb/web-lkddb/EXT3_FS.html
 # https://cateee.net/lkddb/web-lkddb/EXT4_FS.html
+# https://cateee.net/lkddb/web-lkddb/OVERLAY_FS.html
 CONFIG_EXT2_FS=m
 CONFIG_EXT3_FS=m
 CONFIG_EXT4_FS=m
+CONFIG_OVERLAY_FS=m
