--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -13,6 +13,7 @@ BBLAYERS  ?= " \
   ${OEROOT}/../meta-openembedded/meta-oe \
   ${OEROOT}/../meta-openembedded/meta-python \
   ${OEROOT}/../meta-openembedded/meta-networking \
+  ${OEROOT}/../meta-openembedded/meta-gnome \
   ${OEROOT}/../meta-qt5 \
   ${OEROOT}/../meta-phytec \
   ${OEROOT}/../meta-medusa-bsp \
