--- a/.gitattributes
+++ b/.gitattributes
@@ -6,15 +6,20 @@
 *.bb            text eol=lf
 *.bbappend      text eol=lf
 *.conf          text eol=lf
+*.diff          text eol=lf
 *.gitattributes text eol=lf
 *.gitignore     text eol=lf
+*.inc           text eol=lf
+*.hex                eol=crlf
 *.json          text eol=lf
 *.md            text eol=lf
 *.MIT           text eol=lf
+*.mot                eol=crlf
 *.network       text eol=lf
 *.patch         text eol=lf
 *.py            text eol=lf
 *.profile       text eol=lf
+*.rules         test eol=lf
 *.sample        text eol=lf
 *.service       text eol=lf
 *.sh            text eol=lf
