Replaced gpio by peripheral services.

--- a/recipes-core/systemd/systemd-units/ble.service
+++ b/recipes-core/systemd/systemd-units/ble.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=ble
-After=gpio.service drive.target
-Requires=gpio.service
+After=drive.target
 Wants=drive.target
 
 [Service]
