--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -130,7 +130,7 @@ SDKMACHINE ?= "i686"
 # There are other application targets that can be used here too, see
 # meta/classes/image.bbclass and meta/classes/core-image.bbclass for more details.
 # We default to enabling the debugging tweaks.
-EXTRA_IMAGE_FEATURES = "debug-tweaks"
+EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 
 #
 # Additional image features
