Adaptions for Yocto sumo.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,6 +9,8 @@ BBFILE_COLLECTIONS += "medusa-dist"
 BBFILE_PATTERN_medusa-dist = "^${LAYERDIR}/"
 BBFILE_PRIORITY_medusa-dist = "40"
 
+LAYERSERIES_COMPAT_medusa-dist = "sumo"
+
 # Additional license directories.
 LICENSE_PATH += "${LAYERDIR}/licenses"
 
