--- a/recipes-core/systemd/systemd-units/wvdial.service
+++ b/recipes-core/systemd/systemd-units/wvdial.service
@@ -8,7 +8,7 @@ Wants=network.target
 [Service]
 Type=simple
 ExecStart=/usr/bin/wvdial
-ExecStopPost=/bin/bash -c "/bin/echo -e \"AT+CEER\r\" | /bin/busybox microcom -t 2000 /dev/ttyACM0"
+ExecStopPost=/bin/bash -c "/bin/echo -e \"AT+CEER\r\" | microcom -t 2000 /dev/ttyACM0"
 Restart=always
 RestartSec=10
 
