Do not start dbus within the scope of multi-user.target.

--- a/recipes-core/systemd/systemd-units/ble.service
+++ b/recipes-core/systemd/systemd-units/ble.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=ble
-After=drive.target
+After=dbus.service drive.target
+Requires=dbus.service
 Wants=drive.target
 
 [Service]
