--- a/recipes-kernel/linux/linux-mainline/usb-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/usb-devices.cfg
@@ -1,11 +1,13 @@
 # http://www.linux-usb.org/usb.ids
 # Remark: If possible, modules (=m) are used to reduce the boot time of the kernel.
+#         The gsm service is started as early as possible since to establish a connection early.
+#         Therefore CONFIG_USB_ACM is not built as a module.
 
 # Sierra Wireless HL8548, 1519:0020/0302/0303 (Comneon : HSIC Device)
 # http://cateee.net/lkddb/web-lkddb/USB_ACM.html
 # http://cateee.net/lkddb/web-lkddb/USB_NET_CDCETHER.html
 # Remark: CONFIG_USB_SIERRA_NET and CONFIG_USB_SERIAL_SIERRAWIRELESS do not seem to support VID 1519.
-CONFIG_USB_ACM=m
+CONFIG_USB_ACM=y
 CONFIG_USB_NET_CDCETHER=m
 
 # Globalsat BU-353-S4, 067b:2303 (Prolific Technology, Inc. : PL2303 Serial Port)
