Just make one /dev/ramX ramdrive with the (max) size of the entire RAM. Default setting used by Phytec (and Ubuntu 16.04.4 HWE) seems like too much: CONFIG_BLK_DEV_RAM_COUNT=16 CONFIG_BLK_DEV_RAM_SIZE=65536

--- a/recipes-kernel/linux/linux-mainline/virtual-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/virtual-devices.cfg
@@ -1,2 +1,7 @@
+# https://cateee.net/lkddb/web-lkddb/BLK_DEV_RAM_COUNT.html
+# https://cateee.net/lkddb/web-lkddb/BLK_DEV_RAM_SIZE.html
+CONFIG_BLK_DEV_RAM_COUNT=1
+CONFIG_BLK_DEV_RAM_SIZE=524288
+
 # https://cateee.net/lkddb/web-lkddb/FRAMEBUFFER_CONSOLE_ROTATION.html
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
