Corrected typo in service stop for /mnt/data.

--- a/recipes-core/systemd/systemd-units/mnt-data.service
+++ b/recipes-core/systemd/systemd-units/mnt-data.service
@@ -4,8 +4,5 @@ Description=mnt-data
 [Service]
 Type=oneshot
 ExecStart=/etc/scripts/mnt-data.sh start
-ExecStop=/etc/scripts/mnt-data.sh start
+ExecStop=/etc/scripts/mnt-data.sh stop
 RemainAfterExit=yes
-
-[Install]
-WantedBy=basic.target
