Delete everything on /mnt/log except of journal folder and working directory.

--- a/recipes-core/systemd/systemd-units/mnt-log.service
+++ b/recipes-core/systemd/systemd-units/mnt-log.service
@@ -7,6 +7,7 @@ Wants=communication.target
 Type=oneshot
 ExecStart=/bin/mount -t ubifs /dev/ubi0_3 /mnt/log
 ExecStart=/bin/mkdir -p /mnt/log/journal /mnt/log/journal.wd
+ExecStart=/bin/bash -O extglob -c "cd /mnt/log && rm -rf !(journal|journal.wd)"
 ExecStart=/bin/mount -t overlay -o lowerdir=/var/log/journal,upperdir=/mnt/log/journal,workdir=/mnt/log/journal.wd overlay /var/log/journal
 ExecStart=/bin/journalctl --flush
 ExecStop=/bin/journalctl --sync
