Disabled automatic start of sys-kernel-config/debug mounts. Disabled systemd-journal-catalog-update.service.

--- a/recipes-kernel/linux/linux-mainline/filesystems.cfg
+++ b/recipes-kernel/linux/linux-mainline/filesystems.cfg
@@ -7,3 +7,6 @@ CONFIG_EXT4_FS=m
 
 # https://cateee.net/lkddb/web-lkddb/OVERLAY_FS.html
 CONFIG_OVERLAY_FS=m
+
+# https://cateee.net/lkddb/web-lkddb/CONFIGFS_FS.html
+CONFIG_CONFIGFS_FS=m
