Specified {start|stop} behavior for the 'peripheral-mpio' service

--- a/recipes-core/systemd/systemd-units/peripheral-mpio.service
+++ b/recipes-core/systemd/systemd-units/peripheral-mpio.service
@@ -3,7 +3,8 @@ Description=peripheral-mpio
 
 [Service]
 Type=oneshot
-ExecStart=/etc/scripts/peripheral-mpio.sh
+ExecStart=/etc/scripts/peripheral-mpio.sh start
+ExecStop=/etc/scripts/peripheral-mpio.sh stop
 RemainAfterExit=yes
 
 [Install]
