Revert "Specified {start|stop} behavior for the 'peripheral-mpio' service"
This reverts commit 3a67e7238ac37a17058fd5a5cf3e737e64d42d90.

--- a/recipes-core/systemd/systemd-units/peripheral-mpio.service
+++ b/recipes-core/systemd/systemd-units/peripheral-mpio.service
@@ -3,8 +3,7 @@ Description=peripheral-mpio
 
 [Service]
 Type=oneshot
-ExecStart=/etc/scripts/peripheral-mpio.sh start
-ExecStop=/etc/scripts/peripheral-mpio.sh stop
+ExecStart=/etc/scripts/peripheral-mpio.sh
 RemainAfterExit=yes
 
 [Install]
