--- a/recipes-core/systemd/systemd-units/wvdial.service
+++ b/recipes-core/systemd/systemd-units/wvdial.service
@@ -1,16 +1,13 @@
 [Unit]
 Description=wvdial internet dialer service for stromer m2m
 After=gsm.service
-Requires=gsm.service
 PartOf=gsm.service
 Wants=network.target
 
 [Service]
 Type=simple
+ExecStartPre=/etc/scripts/wvdial-gsm-workaround.sh
 ExecStart=/usr/bin/wvdial
 ExecStopPost=/bin/bash -c "/bin/echo -e \"AT+CEER\r\" | microcom -t 2000 /dev/ttyACM0"
 Restart=always
 RestartSec=10
-
-[Install]
-WantedBy=communication.target
