Show the SIM card pin status in wvdial.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -8,7 +8,7 @@ Init1 = ATZ
 Init2 = ATE0
 Init3 = AT+GMI;+GMM;+GMR
 Init4 = ATI9
-Init5 = AT+KGSN=2;+KGSN=3;+CIMI
+Init5 = AT+KGSN=2;+KGSN=3;+CPIN?;+CIMI
 Init6 = AT+COPS?
 Init7 = AT+KBND?;+KCELL=0
 Init8 = AT+CSQ
