Disable wvdial DNS check since we are in a private network.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -14,9 +14,6 @@ Init7 = AT+KBND?;+KCELL=0
 Init8 = AT+CSQ
 Init9 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
 Dial Command = ATD
-Stupid Mode = 1
 PPPD Option = debug
-
-[Dialer swisscom]
-Modem = /dev/ttyUSB0
-Init2 = AT+CGDCONT=1,"IP","gprs.swisscom.ch"
+Stupid Mode = 1
+Check DNS = 0
