--- a/recipes-core/systemd/systemd-units/wvdial.service
+++ b/recipes-core/systemd/systemd-units/wvdial.service
@@ -7,7 +7,7 @@ Wants=network.target
 [Service]
 Type=simple
 ExecStartPre=/etc/scripts/wvdial-gsm-workaround.sh
-ExecStart=/usr/bin/wvdial
+ExecStart=/bin/bash -c "/usr/bin/wvdial || true"
 ExecStopPost=/bin/bash -c "/bin/echo -e \"AT+CEER\r\" | microcom -t 2000 /dev/ttyACM0"
 Restart=always
 RestartSec=10
