--- a/recipes-kernel/linux/linux-mainline/network.cfg
+++ b/recipes-kernel/linux/linux-mainline/network.cfg
@@ -12,3 +12,9 @@ CONFIG_PPTP=m
 CONFIG_PPPOL2TP=m
 CONFIG_PPP_ASYNC=m
 CONFIG_PPP_SYNC_TTY=m
+
+CONFIG_BRIDGE_NETFILTER=m
+CONFIG_STP=m
+CONFIG_BRIDGE=m
+CONFIG_BRIDGE_IGMP_SNOOPING=y
+CONFIG_LLC=m
