Added exfat support since Windows does not allow FAT32 formatting drives >32GB.

--- a/recipes-kernel/linux/linux-mainline/filesystems.cfg
+++ b/recipes-kernel/linux/linux-mainline/filesystems.cfg
@@ -5,6 +5,9 @@ CONFIG_EXT2_FS=m
 CONFIG_EXT3_FS=m
 CONFIG_EXT4_FS=m
 
+# https://cateee.net/lkddb/web-lkddb/FUSE_FS.html
+CONFIG_FUSE_FS=m
+
 # https://cateee.net/lkddb/web-lkddb/OVERLAY_FS.html
 CONFIG_OVERLAY_FS=m
 
