--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -14,6 +14,7 @@ BBLAYERS  ?= " \
   ${OEROOT}/../meta-openembedded/meta-oe \
   ${OEROOT}/../meta-openembedded/meta-python \
   ${OEROOT}/../meta-openembedded/meta-networking \
+  ${OEROOT}/../meta-openembedded/meta-filesystems \
   ${OEROOT}/../meta-qt5 \
   ${OEROOT}/../meta-phytec \
   ${OEROOT}/../meta-medusa-bsp \
