Updated busybox defconfig.

--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.27.2
-# Mon May 14 17:10:48 2018
+# Thu Apr 25 12:23:46 2019
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -330,7 +330,7 @@ CONFIG_UUENCODE=y
 CONFIG_WC=y
 CONFIG_FEATURE_WC_LARGE=y
 CONFIG_WHO=y
-# CONFIG_W is not set
+CONFIG_W=y
 CONFIG_USERS=y
 CONFIG_WHOAMI=y
 CONFIG_YES=y
