Removed coreutils and util-linux from image.

--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.27.2
-# Thu Apr 25 12:23:46 2019
+# Thu Apr 25 12:00:25 2019
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -238,7 +238,7 @@ CONFIG_ID=y
 CONFIG_GROUPS=y
 CONFIG_INSTALL=y
 CONFIG_FEATURE_INSTALL_LONG_OPTIONS=y
-# CONFIG_LINK is not set
+CONFIG_LINK=y
 CONFIG_LN=y
 CONFIG_LOGNAME=y
 CONFIG_LS=y
@@ -268,13 +268,13 @@ CONFIG_MKNOD=y
 CONFIG_MKTEMP=y
 CONFIG_MV=y
 CONFIG_FEATURE_MV_LONG_OPTIONS=y
-# CONFIG_NICE is not set
+CONFIG_NICE=y
 CONFIG_NL=y
 CONFIG_NOHUP=y
 CONFIG_NPROC=y
 CONFIG_OD=y
 CONFIG_PASTE=y
-# CONFIG_PRINTENV is not set
+CONFIG_PRINTENV=y
 CONFIG_PRINTF=y
 CONFIG_PWD=y
 CONFIG_READLINK=y
@@ -574,18 +574,18 @@ CONFIG_BLKDISCARD=y
 CONFIG_BLKID=y
 # CONFIG_FEATURE_BLKID_TYPE is not set
 CONFIG_BLOCKDEV=y
-# CONFIG_CAL is not set
+CONFIG_CAL=y
 CONFIG_CHRT=y
 CONFIG_DMESG=y
 CONFIG_FEATURE_DMESG_PRETTY=y
 CONFIG_EJECT=y
 CONFIG_FEATURE_EJECT_SCSI=y
-# CONFIG_FALLOCATE is not set
+CONFIG_FALLOCATE=y
 CONFIG_FATATTR=y
 CONFIG_FBSET=y
 CONFIG_FEATURE_FBSET_FANCY=y
 CONFIG_FEATURE_FBSET_READMODE=y
-# CONFIG_FDFORMAT is not set
+CONFIG_FDFORMAT=y
 CONFIG_FDISK=y
 # CONFIG_FDISK_SUPPORT_LARGE_DISKS is not set
 CONFIG_FEATURE_FDISK_WRITABLE=y
@@ -600,7 +600,7 @@ CONFIG_FLOCK=y
 CONFIG_FDFLUSH=y
 CONFIG_FREERAMDISK=y
 CONFIG_FSCK_MINIX=y
-# CONFIG_FSFREEZE is not set
+CONFIG_FSFREEZE=y
 CONFIG_FSTRIM=y
 CONFIG_GETOPT=y
 CONFIG_FEATURE_GETOPT_LONG=y
@@ -612,8 +612,8 @@ CONFIG_HWCLOCK=y
 CONFIG_FEATURE_HWCLOCK_LONG_OPTIONS=y
 # CONFIG_FEATURE_HWCLOCK_ADJTIME_FHS is not set
 CONFIG_IONICE=y
-# CONFIG_IPCRM is not set
-# CONFIG_IPCS is not set
+CONFIG_IPCRM=y
+CONFIG_IPCS=y
 CONFIG_LAST=y
 CONFIG_FEATURE_LAST_FANCY=y
 CONFIG_LOSETUP=y
@@ -648,16 +648,16 @@ CONFIG_FEATURE_MOUNT_FLAGS=y
 CONFIG_FEATURE_MOUNT_FSTAB=y
 CONFIG_FEATURE_MOUNT_OTHERTAB=y
 CONFIG_MOUNTPOINT=y
-# CONFIG_NSENTER is not set
-# CONFIG_FEATURE_NSENTER_LONG_OPTS is not set
+CONFIG_NSENTER=y
+CONFIG_FEATURE_NSENTER_LONG_OPTS=y
 CONFIG_PIVOT_ROOT=y
 CONFIG_RDATE=y
 CONFIG_RDEV=y
 CONFIG_READPROFILE=y
 CONFIG_RENICE=y
 CONFIG_REV=y
-# CONFIG_RTCWAKE is not set
-# CONFIG_SCRIPT is not set
+CONFIG_RTCWAKE=y
+CONFIG_SCRIPT=y
 CONFIG_SCRIPTREPLAY=y
 CONFIG_SETARCH=y
 CONFIG_LINUX32=y
@@ -674,7 +674,7 @@ CONFIG_FEATURE_TASKSET_FANCY=y
 CONFIG_UEVENT=y
 CONFIG_UMOUNT=y
 CONFIG_FEATURE_UMOUNT_ALL=y
-# CONFIG_UNSHARE is not set
+CONFIG_UNSHARE=y
 CONFIG_WALL=y
 
 #
