Do not use default route for wvdial/ppp.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -14,6 +14,7 @@ Init7 = AT+KBND?;+KCELL=0
 Init8 = AT+CSQ
 Init9 = AT+CGDCONT=1,"IP","stromer.m2m.ch"
 Dial Command = ATD
-PPPD Option = debug
+PPPD Option = nodefaultroute
 Stupid Mode = 1
 Check DNS = 0
+Check Def Route = 0
