Renamed medusa layer to medusa-bsp.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -15,4 +15,4 @@ LAYERSERIES_COMPAT_medusa-dist = "sumo"
 LICENSE_PATH += "${LAYERDIR}/licenses"
 
 # Layer dependencies
-LAYERDEPENDS_medusa-dist = "phytec medusa"
+LAYERDEPENDS_medusa-dist = "phytec medusa-bsp"
