Use CGMI, CGMM and CGMR instead of GMI, GMM and GMR since they are mandatory.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -6,7 +6,7 @@ Username = user
 Password = pass
 Init1 = ATZ
 Init2 = ATE0
-Init3 = AT+GMI;+GMM;+GMR
+Init3 = AT+CGMI;+CGMM;+CGMR
 Init4 = ATI9
 Init5 = AT+KGSN=2;+KGSN=3;+CPIN?;+CIMI
 Init6 = AT+COPS?
