--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -142,13 +142,13 @@ CONFIG_ZCAT=y
 CONFIG_FEATURE_GUNZIP_LONG_OPTIONS=y
 CONFIG_BUNZIP2=y
 CONFIG_BZCAT=y
-CONFIG_UNLZMA=y
-CONFIG_LZCAT=y
-CONFIG_LZMA=y
+# CONFIG_UNLZMA is not set
+# CONFIG_LZCAT is not set
+# CONFIG_LZMA is not set
 # CONFIG_FEATURE_LZMA_FAST is not set
-CONFIG_UNXZ=y
-CONFIG_XZCAT=y
-CONFIG_XZ=y
+# CONFIG_UNXZ is not set
+# CONFIG_XZCAT is not set
+# CONFIG_XZ is not set
 CONFIG_BZIP2=y
 CONFIG_FEATURE_BZIP2_DECOMPRESS=y
 CONFIG_CPIO=y
@@ -167,17 +167,17 @@ CONFIG_LZOP=y
 # CONFIG_LZOP_COMPR_HIGH is not set
 CONFIG_RPM=y
 CONFIG_RPM2CPIO=y
-CONFIG_TAR=y
-CONFIG_FEATURE_TAR_LONG_OPTIONS=y
-CONFIG_FEATURE_TAR_CREATE=y
-CONFIG_FEATURE_TAR_AUTODETECT=y
-CONFIG_FEATURE_TAR_FROM=y
-CONFIG_FEATURE_TAR_OLDGNU_COMPATIBILITY=y
-CONFIG_FEATURE_TAR_OLDSUN_COMPATIBILITY=y
-CONFIG_FEATURE_TAR_GNU_EXTENSIONS=y
-CONFIG_FEATURE_TAR_TO_COMMAND=y
-CONFIG_FEATURE_TAR_UNAME_GNAME=y
-CONFIG_FEATURE_TAR_NOPRESERVE_TIME=y
+# CONFIG_TAR is not set
+# CONFIG_FEATURE_TAR_LONG_OPTIONS is not set
+# CONFIG_FEATURE_TAR_CREATE is not set
+# CONFIG_FEATURE_TAR_AUTODETECT is not set
+# CONFIG_FEATURE_TAR_FROM is not set
+# CONFIG_FEATURE_TAR_OLDGNU_COMPATIBILITY is not set
+# CONFIG_FEATURE_TAR_OLDSUN_COMPATIBILITY is not set
+# CONFIG_FEATURE_TAR_GNU_EXTENSIONS is not set
+# CONFIG_FEATURE_TAR_TO_COMMAND is not set
+# CONFIG_FEATURE_TAR_UNAME_GNAME is not set
+# CONFIG_FEATURE_TAR_NOPRESERVE_TIME is not set
 # CONFIG_FEATURE_TAR_SELINUX is not set
 CONFIG_UNZIP=y
 CONFIG_FEATURE_UNZIP_CDF=y
@@ -235,7 +235,7 @@ CONFIG_HEAD=y
 CONFIG_FEATURE_FANCY_HEAD=y
 CONFIG_HOSTID=y
 CONFIG_ID=y
-CONFIG_GROUPS=y
+# CONFIG_GROUPS is not set
 CONFIG_INSTALL=y
 CONFIG_FEATURE_INSTALL_LONG_OPTIONS=y
 CONFIG_LINK=y
@@ -354,7 +354,7 @@ CONFIG_FEATURE_HUMAN_READABLE=y
 # Console Utilities
 #
 CONFIG_CHVT=y
-CONFIG_CLEAR=y
+# CONFIG_CLEAR is not set
 CONFIG_DEALLOCVT=y
 CONFIG_DUMPKMAP=y
 CONFIG_FGCONSOLE=y
@@ -371,7 +371,7 @@ CONFIG_FEATURE_LOADFONT_PSF2=y
 CONFIG_FEATURE_LOADFONT_RAW=y
 CONFIG_LOADKMAP=y
 CONFIG_OPENVT=y
-CONFIG_RESET=y
+# CONFIG_RESET is not set
 CONFIG_RESIZE=y
 CONFIG_FEATURE_RESIZE_PRINT=y
 CONFIG_SETCONSOLE=y
@@ -395,9 +395,9 @@ CONFIG_WHICH=y
 #
 # Editors
 #
-CONFIG_AWK=y
-CONFIG_FEATURE_AWK_LIBM=y
-CONFIG_FEATURE_AWK_GNU_EXTENSIONS=y
+# CONFIG_AWK is not set
+# CONFIG_FEATURE_AWK_LIBM is not set
+# CONFIG_FEATURE_AWK_GNU_EXTENSIONS is not set
 CONFIG_CMP=y
 CONFIG_DIFF=y
 CONFIG_FEATURE_DIFF_LONG_OPTIONS=y
@@ -451,10 +451,10 @@ CONFIG_FEATURE_FIND_PATH=y
 CONFIG_FEATURE_FIND_REGEX=y
 # CONFIG_FEATURE_FIND_CONTEXT is not set
 CONFIG_FEATURE_FIND_LINKS=y
-CONFIG_GREP=y
-CONFIG_EGREP=y
-CONFIG_FGREP=y
-CONFIG_FEATURE_GREP_CONTEXT=y
+# CONFIG_GREP is not set
+# CONFIG_EGREP is not set
+# CONFIG_FGREP is not set
+# CONFIG_FEATURE_GREP_CONTEXT is not set
 CONFIG_XARGS=y
 CONFIG_FEATURE_XARGS_SUPPORT_CONFIRMATION=y
 CONFIG_FEATURE_XARGS_SUPPORT_QUOTES=y
@@ -468,11 +468,11 @@ CONFIG_FEATURE_XARGS_SUPPORT_REPL_STR=y
 CONFIG_BOOTCHARTD=y
 CONFIG_FEATURE_BOOTCHARTD_BLOATED_HEADER=y
 CONFIG_FEATURE_BOOTCHARTD_CONFIG_FILE=y
-CONFIG_HALT=y
-CONFIG_POWEROFF=y
-CONFIG_REBOOT=y
-CONFIG_FEATURE_CALL_TELINIT=y
-CONFIG_TELINIT_PATH="/sbin/telinit"
+# CONFIG_HALT is not set
+# CONFIG_POWEROFF is not set
+# CONFIG_REBOOT is not set
+# CONFIG_FEATURE_CALL_TELINIT is not set
+CONFIG_TELINIT_PATH=""
 # CONFIG_INIT is not set
 # CONFIG_LINUXRC is not set
 # CONFIG_FEATURE_USE_INITTAB is not set
@@ -511,19 +511,19 @@ CONFIG_MKPASSWD=y
 CONFIG_DELUSER=y
 CONFIG_DELGROUP=y
 CONFIG_FEATURE_DEL_USER_FROM_GROUP=y
-CONFIG_GETTY=y
-CONFIG_LOGIN=y
+# CONFIG_GETTY is not set
+# CONFIG_LOGIN is not set
 # CONFIG_LOGIN_SESSION_AS_CHILD is not set
-CONFIG_LOGIN_SCRIPTS=y
-CONFIG_FEATURE_NOLOGIN=y
-CONFIG_FEATURE_SECURETTY=y
+# CONFIG_LOGIN_SCRIPTS is not set
+# CONFIG_FEATURE_NOLOGIN is not set
+# CONFIG_FEATURE_SECURETTY is not set
 CONFIG_PASSWD=y
 CONFIG_FEATURE_PASSWD_WEAK_CHECK=y
-CONFIG_SU=y
-CONFIG_FEATURE_SU_SYSLOG=y
-CONFIG_FEATURE_SU_CHECKS_SHELLS=y
+# CONFIG_SU is not set
+# CONFIG_FEATURE_SU_SYSLOG is not set
+# CONFIG_FEATURE_SU_CHECKS_SHELLS is not set
 # CONFIG_FEATURE_SU_BLANK_PW_NEEDS_SECURE_TTY is not set
-CONFIG_SULOGIN=y
+# CONFIG_SULOGIN is not set
 CONFIG_VLOCK=y
 
 #
@@ -538,14 +538,14 @@ CONFIG_LSATTR=y
 # Linux Module Utilities
 #
 CONFIG_MODPROBE_SMALL=y
-CONFIG_DEPMOD=y
-CONFIG_INSMOD=y
-CONFIG_LSMOD=y
+# CONFIG_DEPMOD is not set
+# CONFIG_INSMOD is not set
+# CONFIG_LSMOD is not set
 # CONFIG_FEATURE_LSMOD_PRETTY_2_6_OUTPUT is not set
-CONFIG_MODINFO=y
-CONFIG_MODPROBE=y
+# CONFIG_MODINFO is not set
+# CONFIG_MODPROBE is not set
 # CONFIG_FEATURE_MODPROBE_BLACKLIST is not set
-CONFIG_RMMOD=y
+# CONFIG_RMMOD is not set
 
 #
 # Options common to multiple modutils
@@ -637,16 +637,16 @@ CONFIG_MKFS_VFAT=y
 CONFIG_MKSWAP=y
 CONFIG_FEATURE_MKSWAP_UUID=y
 CONFIG_MORE=y
-CONFIG_MOUNT=y
-CONFIG_FEATURE_MOUNT_FAKE=y
-CONFIG_FEATURE_MOUNT_VERBOSE=y
+# CONFIG_MOUNT is not set
+# CONFIG_FEATURE_MOUNT_FAKE is not set
+# CONFIG_FEATURE_MOUNT_VERBOSE is not set
 # CONFIG_FEATURE_MOUNT_HELPERS is not set
-CONFIG_FEATURE_MOUNT_LABEL=y
+# CONFIG_FEATURE_MOUNT_LABEL is not set
 # CONFIG_FEATURE_MOUNT_NFS is not set
-CONFIG_FEATURE_MOUNT_CIFS=y
-CONFIG_FEATURE_MOUNT_FLAGS=y
-CONFIG_FEATURE_MOUNT_FSTAB=y
-CONFIG_FEATURE_MOUNT_OTHERTAB=y
+# CONFIG_FEATURE_MOUNT_CIFS is not set
+# CONFIG_FEATURE_MOUNT_FLAGS is not set
+# CONFIG_FEATURE_MOUNT_FSTAB is not set
+# CONFIG_FEATURE_MOUNT_OTHERTAB is not set
 CONFIG_MOUNTPOINT=y
 CONFIG_NSENTER=y
 CONFIG_FEATURE_NSENTER_LONG_OPTS=y
@@ -760,17 +760,17 @@ CONFIG_I2CSET=y
 CONFIG_I2CDUMP=y
 CONFIG_I2CDETECT=y
 # CONFIG_INOTIFYD is not set
-CONFIG_LESS=y
-CONFIG_FEATURE_LESS_MAXLINES=9999999
-CONFIG_FEATURE_LESS_BRACKETS=y
-CONFIG_FEATURE_LESS_FLAGS=y
-CONFIG_FEATURE_LESS_TRUNCATE=y
-CONFIG_FEATURE_LESS_MARKS=y
-CONFIG_FEATURE_LESS_REGEXP=y
-CONFIG_FEATURE_LESS_WINCH=y
-CONFIG_FEATURE_LESS_ASK_TERMINAL=y
-CONFIG_FEATURE_LESS_DASHCMD=y
-CONFIG_FEATURE_LESS_LINENUMS=y
+# CONFIG_LESS is not set
+CONFIG_FEATURE_LESS_MAXLINES=0
+# CONFIG_FEATURE_LESS_BRACKETS is not set
+# CONFIG_FEATURE_LESS_FLAGS is not set
+# CONFIG_FEATURE_LESS_TRUNCATE is not set
+# CONFIG_FEATURE_LESS_MARKS is not set
+# CONFIG_FEATURE_LESS_REGEXP is not set
+# CONFIG_FEATURE_LESS_WINCH is not set
+# CONFIG_FEATURE_LESS_ASK_TERMINAL is not set
+# CONFIG_FEATURE_LESS_DASHCMD is not set
+# CONFIG_FEATURE_LESS_LINENUMS is not set
 CONFIG_LSSCSI=y
 CONFIG_MAKEDEVS=y
 # CONFIG_FEATURE_MAKEDEVS_LEAF is not set
@@ -778,13 +778,13 @@ CONFIG_FEATURE_MAKEDEVS_TABLE=y
 CONFIG_MAN=y
 CONFIG_MICROCOM=y
 CONFIG_MT=y
-CONFIG_NANDWRITE=y
-CONFIG_NANDDUMP=y
+# CONFIG_NANDWRITE is not set
+# CONFIG_NANDDUMP is not set
 CONFIG_PARTPROBE=y
 CONFIG_RAIDAUTORUN=y
 CONFIG_READAHEAD=y
 # CONFIG_RFKILL is not set
-CONFIG_RUNLEVEL=y
+# CONFIG_RUNLEVEL is not set
 CONFIG_RX=y
 CONFIG_SETSERIAL=y
 CONFIG_STRINGS=y
@@ -858,7 +858,7 @@ CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_TIME=y
 CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_DAYTIME=y
 CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_CHARGEN=y
 # CONFIG_FEATURE_INETD_RPC is not set
-CONFIG_IP=y
+# CONFIG_IP is not set
 CONFIG_IPADDR=y
 CONFIG_IPLINK=y
 CONFIG_IPROUTE=y
@@ -897,7 +897,7 @@ CONFIG_FEATURE_FANCY_PING=y
 CONFIG_PSCAN=y
 CONFIG_ROUTE=y
 CONFIG_SLATTACH=y
-CONFIG_SSL_CLIENT=y
+# CONFIG_SSL_CLIENT is not set
 CONFIG_TCPSVD=y
 CONFIG_UDPSVD=y
 CONFIG_TELNET=y
@@ -926,13 +926,13 @@ CONFIG_FEATURE_TRACEROUTE_USE_ICMP=y
 CONFIG_TUNCTL=y
 CONFIG_FEATURE_TUNCTL_UG=y
 CONFIG_VCONFIG=y
-CONFIG_WGET=y
-CONFIG_FEATURE_WGET_LONG_OPTIONS=y
-CONFIG_FEATURE_WGET_STATUSBAR=y
-CONFIG_FEATURE_WGET_AUTHENTICATION=y
-CONFIG_FEATURE_WGET_TIMEOUT=y
-CONFIG_FEATURE_WGET_HTTPS=y
-CONFIG_FEATURE_WGET_OPENSSL=y
+# CONFIG_WGET is not set
+# CONFIG_FEATURE_WGET_LONG_OPTIONS is not set
+# CONFIG_FEATURE_WGET_STATUSBAR is not set
+# CONFIG_FEATURE_WGET_AUTHENTICATION is not set
+# CONFIG_FEATURE_WGET_TIMEOUT is not set
+# CONFIG_FEATURE_WGET_HTTPS is not set
+# CONFIG_FEATURE_WGET_OPENSSL is not set
 CONFIG_WHOIS=y
 CONFIG_ZCIP=y
 # CONFIG_UDHCPC6 is not set
@@ -1051,58 +1051,58 @@ CONFIG_SVLOGD=y
 #
 # Shells
 #
-CONFIG_SH_IS_ASH=y
+# CONFIG_SH_IS_ASH is not set
 # CONFIG_SH_IS_HUSH is not set
-# CONFIG_SH_IS_NONE is not set
+CONFIG_SH_IS_NONE=y
 # CONFIG_BASH_IS_ASH is not set
 # CONFIG_BASH_IS_HUSH is not set
 CONFIG_BASH_IS_NONE=y
-CONFIG_ASH=y
-CONFIG_ASH_OPTIMIZE_FOR_SIZE=y
-CONFIG_ASH_INTERNAL_GLOB=y
-CONFIG_ASH_BASH_COMPAT=y
-CONFIG_ASH_JOB_CONTROL=y
-CONFIG_ASH_ALIAS=y
-CONFIG_ASH_RANDOM_SUPPORT=y
-CONFIG_ASH_EXPAND_PRMT=y
-CONFIG_ASH_IDLE_TIMEOUT=y
-CONFIG_ASH_MAIL=y
-CONFIG_ASH_ECHO=y
-CONFIG_ASH_PRINTF=y
-CONFIG_ASH_TEST=y
-CONFIG_ASH_HELP=y
-CONFIG_ASH_GETOPTS=y
-CONFIG_ASH_CMDCMD=y
+# CONFIG_ASH is not set
+# CONFIG_ASH_OPTIMIZE_FOR_SIZE is not set
+# CONFIG_ASH_INTERNAL_GLOB is not set
+# CONFIG_ASH_BASH_COMPAT is not set
+# CONFIG_ASH_JOB_CONTROL is not set
+# CONFIG_ASH_ALIAS is not set
+# CONFIG_ASH_RANDOM_SUPPORT is not set
+# CONFIG_ASH_EXPAND_PRMT is not set
+# CONFIG_ASH_IDLE_TIMEOUT is not set
+# CONFIG_ASH_MAIL is not set
+# CONFIG_ASH_ECHO is not set
+# CONFIG_ASH_PRINTF is not set
+# CONFIG_ASH_TEST is not set
+# CONFIG_ASH_HELP is not set
+# CONFIG_ASH_GETOPTS is not set
+# CONFIG_ASH_CMDCMD is not set
 CONFIG_CTTYHACK=y
-CONFIG_HUSH=y
-CONFIG_HUSH_BASH_COMPAT=y
-CONFIG_HUSH_BRACE_EXPANSION=y
-CONFIG_HUSH_INTERACTIVE=y
-CONFIG_HUSH_SAVEHISTORY=y
-CONFIG_HUSH_JOB=y
-CONFIG_HUSH_TICK=y
-CONFIG_HUSH_IF=y
-CONFIG_HUSH_LOOPS=y
-CONFIG_HUSH_CASE=y
-CONFIG_HUSH_FUNCTIONS=y
-CONFIG_HUSH_LOCAL=y
-CONFIG_HUSH_RANDOM_SUPPORT=y
-CONFIG_HUSH_MODE_X=y
-CONFIG_HUSH_ECHO=y
-CONFIG_HUSH_PRINTF=y
-CONFIG_HUSH_TEST=y
-CONFIG_HUSH_HELP=y
-CONFIG_HUSH_EXPORT=y
-CONFIG_HUSH_EXPORT_N=y
-CONFIG_HUSH_KILL=y
-CONFIG_HUSH_WAIT=y
-CONFIG_HUSH_TRAP=y
-CONFIG_HUSH_TYPE=y
-CONFIG_HUSH_READ=y
-CONFIG_HUSH_SET=y
-CONFIG_HUSH_UNSET=y
-CONFIG_HUSH_ULIMIT=y
-CONFIG_HUSH_UMASK=y
+# CONFIG_HUSH is not set
+# CONFIG_HUSH_BASH_COMPAT is not set
+# CONFIG_HUSH_BRACE_EXPANSION is not set
+# CONFIG_HUSH_INTERACTIVE is not set
+# CONFIG_HUSH_SAVEHISTORY is not set
+# CONFIG_HUSH_JOB is not set
+# CONFIG_HUSH_TICK is not set
+# CONFIG_HUSH_IF is not set
+# CONFIG_HUSH_LOOPS is not set
+# CONFIG_HUSH_CASE is not set
+# CONFIG_HUSH_FUNCTIONS is not set
+# CONFIG_HUSH_LOCAL is not set
+# CONFIG_HUSH_RANDOM_SUPPORT is not set
+# CONFIG_HUSH_MODE_X is not set
+# CONFIG_HUSH_ECHO is not set
+# CONFIG_HUSH_PRINTF is not set
+# CONFIG_HUSH_TEST is not set
+# CONFIG_HUSH_HELP is not set
+# CONFIG_HUSH_EXPORT is not set
+# CONFIG_HUSH_EXPORT_N is not set
+# CONFIG_HUSH_KILL is not set
+# CONFIG_HUSH_WAIT is not set
+# CONFIG_HUSH_TRAP is not set
+# CONFIG_HUSH_TYPE is not set
+# CONFIG_HUSH_READ is not set
+# CONFIG_HUSH_SET is not set
+# CONFIG_HUSH_UNSET is not set
+# CONFIG_HUSH_ULIMIT is not set
+# CONFIG_HUSH_UMASK is not set
 # CONFIG_HUSH_MEMLEAK is not set
 # CONFIG_MSH is not set
 
