Removed some unused features from busybox.

--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -465,9 +465,9 @@ CONFIG_FEATURE_XARGS_SUPPORT_REPL_STR=y
 #
 # Init Utilities
 #
-CONFIG_BOOTCHARTD=y
-CONFIG_FEATURE_BOOTCHARTD_BLOATED_HEADER=y
-CONFIG_FEATURE_BOOTCHARTD_CONFIG_FILE=y
+# CONFIG_BOOTCHARTD is not set
+# CONFIG_FEATURE_BOOTCHARTD_BLOATED_HEADER is not set
+# CONFIG_FEATURE_BOOTCHARTD_CONFIG_FILE is not set
 # CONFIG_HALT is not set
 # CONFIG_POWEROFF is not set
 # CONFIG_REBOOT is not set
@@ -812,7 +812,7 @@ CONFIG_ARPING=y
 CONFIG_BRCTL=y
 CONFIG_FEATURE_BRCTL_FANCY=y
 CONFIG_FEATURE_BRCTL_SHOW=y
-CONFIG_DNSD=y
+# CONFIG_DNSD is not set
 CONFIG_ETHER_WAKE=y
 CONFIG_FTPD=y
 CONFIG_FEATURE_FTPD_WRITE=y
@@ -888,9 +888,9 @@ CONFIG_NETSTAT=y
 CONFIG_FEATURE_NETSTAT_WIDE=y
 CONFIG_FEATURE_NETSTAT_PRG=y
 CONFIG_NSLOOKUP=y
-CONFIG_NTPD=y
-CONFIG_FEATURE_NTPD_SERVER=y
-CONFIG_FEATURE_NTPD_CONF=y
+# CONFIG_NTPD is not set
+# CONFIG_FEATURE_NTPD_SERVER is not set
+# CONFIG_FEATURE_NTPD_CONF is not set
 CONFIG_PING=y
 CONFIG_PING6=y
 CONFIG_FEATURE_FANCY_PING=y
@@ -959,9 +959,9 @@ CONFIG_IFUPDOWN_UDHCPC_CMD_OPTIONS="-R -n"
 #
 # Print Utilities
 #
-CONFIG_LPD=y
-CONFIG_LPR=y
-CONFIG_LPQ=y
+# CONFIG_LPD is not set
+# CONFIG_LPR is not set
+# CONFIG_LPQ is not set
 
 #
 # Mail Utilities
@@ -1020,18 +1020,18 @@ CONFIG_FEATURE_SHOW_THREADS=y
 #
 # Runit Utilities
 #
-CONFIG_CHPST=y
+# CONFIG_CHPST is not set
 # CONFIG_SETUIDGID is not set
 # CONFIG_ENVUIDGID is not set
 # CONFIG_ENVDIR is not set
 # CONFIG_SOFTLIMIT is not set
-CONFIG_RUNSV=y
-CONFIG_RUNSVDIR=y
+# CONFIG_RUNSV is not set
+# CONFIG_RUNSVDIR is not set
 # CONFIG_FEATURE_RUNSVDIR_LOG is not set
-CONFIG_SV=y
-CONFIG_SV_DEFAULT_SERVICE_DIR="/var/service"
+# CONFIG_SV is not set
+CONFIG_SV_DEFAULT_SERVICE_DIR=""
 # CONFIG_SVC is not set
-CONFIG_SVLOGD=y
+# CONFIG_SVLOGD is not set
 # CONFIG_CHCON is not set
 # CONFIG_FEATURE_CHCON_LONG_OPTIONS is not set
 # CONFIG_GETENFORCE is not set
