--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -16,8 +16,8 @@ CONFIG_INCLUDE_SUSv2=y
 CONFIG_SHOW_USAGE=y
 CONFIG_FEATURE_VERBOSE_USAGE=y
 CONFIG_FEATURE_COMPRESS_USAGE=y
-CONFIG_BUSYBOX=y
-CONFIG_FEATURE_INSTALLER=y
+# CONFIG_BUSYBOX is not set
+# CONFIG_FEATURE_INSTALLER is not set=y
 # CONFIG_INSTALL_NO_USR is not set
 # CONFIG_PAM is not set
 CONFIG_LONG_OPTS=y
@@ -529,9 +529,9 @@ CONFIG_VLOCK=y
 #
 # Linux Ext2 FS Progs
 #
-CONFIG_CHATTR=y
-CONFIG_FSCK=y
-CONFIG_LSATTR=y
+# CONFIG_CHATTR is not set
+# CONFIG_FSCK is not set
+# CONFIG_LSATTR is not set
 # CONFIG_TUNE2FS is not set
 
 #
@@ -578,8 +578,8 @@ CONFIG_CAL=y
 CONFIG_CHRT=y
 CONFIG_DMESG=y
 CONFIG_FEATURE_DMESG_PRETTY=y
-CONFIG_EJECT=y
-CONFIG_FEATURE_EJECT_SCSI=y
+# CONFIG_EJECT is not set
+# CONFIG_FEATURE_EJECT_SCSI is not set
 CONFIG_FALLOCATE=y
 CONFIG_FATATTR=y
 CONFIG_FBSET=y
@@ -617,7 +617,7 @@ CONFIG_IPCS=y
 CONFIG_LAST=y
 CONFIG_FEATURE_LAST_FANCY=y
 CONFIG_LOSETUP=y
-CONFIG_LSPCI=y
+# CONFIG_LSPCI is not set
 CONFIG_LSUSB=y
 # CONFIG_MDEV is not set
 # CONFIG_FEATURE_MDEV_CONF is not set
@@ -627,8 +627,8 @@ CONFIG_LSUSB=y
 # CONFIG_FEATURE_MDEV_LOAD_FIRMWARE is not set
 CONFIG_MESG=y
 CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP=y
-CONFIG_MKE2FS=y
-CONFIG_MKFS_EXT2=y
+# CONFIG_MKE2FS is not set
+# CONFIG_MKFS_EXT2 is not set
 CONFIG_MKFS_MINIX=y
 CONFIG_FEATURE_MINIX2=y
 # CONFIG_MKFS_REISER is not set
@@ -656,7 +656,7 @@ CONFIG_RDEV=y
 CONFIG_READPROFILE=y
 CONFIG_RENICE=y
 CONFIG_REV=y
-CONFIG_RTCWAKE=y
+# CONFIG_RTCWAKE is not set
 CONFIG_SCRIPT=y
 CONFIG_SCRIPTREPLAY=y
 CONFIG_SETARCH=y
@@ -743,18 +743,18 @@ CONFIG_FEATURE_DC_LIBM=y
 # CONFIG_DEVFSD_VERBOSE is not set
 # CONFIG_FEATURE_DEVFS is not set
 CONFIG_DEVMEM=y
-CONFIG_FBSPLASH=y
+# CONFIG_FBSPLASH is not set
 # CONFIG_FLASH_ERASEALL is not set
 # CONFIG_FLASH_LOCK is not set
 # CONFIG_FLASH_UNLOCK is not set
 # CONFIG_FLASHCP is not set
-CONFIG_HDPARM=y
-CONFIG_FEATURE_HDPARM_GET_IDENTITY=y
-CONFIG_FEATURE_HDPARM_HDIO_SCAN_HWIF=y
-CONFIG_FEATURE_HDPARM_HDIO_UNREGISTER_HWIF=y
-CONFIG_FEATURE_HDPARM_HDIO_DRIVE_RESET=y
-CONFIG_FEATURE_HDPARM_HDIO_TRISTATE_HWIF=y
-CONFIG_FEATURE_HDPARM_HDIO_GETSET_DMA=y
+# CONFIG_HDPARM is not set
+# CONFIG_FEATURE_HDPARM_GET_IDENTITY is not set
+# CONFIG_FEATURE_HDPARM_HDIO_SCAN_HWIF is not set
+# CONFIG_FEATURE_HDPARM_HDIO_UNREGISTER_HWIF is not set
+# CONFIG_FEATURE_HDPARM_HDIO_DRIVE_RESET is not set
+# CONFIG_FEATURE_HDPARM_HDIO_TRISTATE_HWIF is not set
+# CONFIG_FEATURE_HDPARM_HDIO_GETSET_DMA is not set
 CONFIG_I2CGET=y
 CONFIG_I2CSET=y
 CONFIG_I2CDUMP=y
@@ -771,13 +771,13 @@ CONFIG_FEATURE_LESS_MAXLINES=0
 # CONFIG_FEATURE_LESS_ASK_TERMINAL is not set
 # CONFIG_FEATURE_LESS_DASHCMD is not set
 # CONFIG_FEATURE_LESS_LINENUMS is not set
-CONFIG_LSSCSI=y
+# CONFIG_LSSCSI is not set
 CONFIG_MAKEDEVS=y
 # CONFIG_FEATURE_MAKEDEVS_LEAF is not set
 CONFIG_FEATURE_MAKEDEVS_TABLE=y
-CONFIG_MAN=y
+# CONFIG_MAN is not set
 CONFIG_MICROCOM=y
-CONFIG_MT=y
+# CONFIG_MT is not set
 # CONFIG_NANDWRITE is not set
 # CONFIG_NANDDUMP is not set
 CONFIG_PARTPROBE=y
@@ -798,7 +798,7 @@ CONFIG_UBIRSVOL=y
 CONFIG_UBIUPDATEVOL=y
 CONFIG_UBIRENAME=y
 CONFIG_VOLNAME=y
-CONFIG_WATCHDOG=y
+# CONFIG_WATCHDOG is not set
 
 #
 # Networking Utilities
@@ -1073,7 +1073,7 @@ CONFIG_BASH_IS_NONE=y
 # CONFIG_ASH_HELP is not set
 # CONFIG_ASH_GETOPTS is not set
 # CONFIG_ASH_CMDCMD is not set
-CONFIG_CTTYHACK=y
+# CONFIG_CTTYHACK is not set
 # CONFIG_HUSH is not set
 # CONFIG_HUSH_BASH_COMPAT is not set
 # CONFIG_HUSH_BRACE_EXPANSION is not set
