--- a/recipes-kernel/linux/linux-mainline/filesystems.cfg
+++ b/recipes-kernel/linux/linux-mainline/filesystems.cfg
@@ -1,5 +1,5 @@
 # https://cateee.net/lkddb/web-lkddb/FUSE_FS.html
-CONFIG_FUSE_FS=m
+CONFIG_FUSE_FS=y
 
 # https://cateee.net/lkddb/web-lkddb/OVERLAY_FS.html
 CONFIG_OVERLAY_FS=m
