--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -578,8 +578,8 @@ CONFIG_CAL=y
 CONFIG_CHRT=y
 CONFIG_DMESG=y
 CONFIG_FEATURE_DMESG_PRETTY=y
-# CONFIG_EJECT is not set
-# CONFIG_FEATURE_EJECT_SCSI is not set
+CONFIG_EJECT=y
+CONFIG_FEATURE_EJECT_SCSI=y
 CONFIG_FALLOCATE=y
 CONFIG_FATATTR=y
 CONFIG_FBSET=y
@@ -748,13 +748,13 @@ CONFIG_DEVMEM=y
 # CONFIG_FLASH_LOCK is not set
 # CONFIG_FLASH_UNLOCK is not set
 # CONFIG_FLASHCP is not set
-# CONFIG_HDPARM is not set
-# CONFIG_FEATURE_HDPARM_GET_IDENTITY is not set
-# CONFIG_FEATURE_HDPARM_HDIO_SCAN_HWIF is not set
-# CONFIG_FEATURE_HDPARM_HDIO_UNREGISTER_HWIF is not set
-# CONFIG_FEATURE_HDPARM_HDIO_DRIVE_RESET is not set
-# CONFIG_FEATURE_HDPARM_HDIO_TRISTATE_HWIF is not set
-# CONFIG_FEATURE_HDPARM_HDIO_GETSET_DMA is not set
+CONFIG_HDPARM=y
+CONFIG_FEATURE_HDPARM_GET_IDENTITY=y
+CONFIG_FEATURE_HDPARM_HDIO_SCAN_HWIF=y
+CONFIG_FEATURE_HDPARM_HDIO_UNREGISTER_HWIF=y
+CONFIG_FEATURE_HDPARM_HDIO_DRIVE_RESET=y
+CONFIG_FEATURE_HDPARM_HDIO_TRISTATE_HWIF=y
+CONFIG_FEATURE_HDPARM_HDIO_GETSET_DMA=y
 CONFIG_I2CGET=y
 CONFIG_I2CSET=y
 CONFIG_I2CDUMP=y
@@ -771,7 +771,7 @@ CONFIG_FEATURE_LESS_MAXLINES=0
 # CONFIG_FEATURE_LESS_ASK_TERMINAL is not set
 # CONFIG_FEATURE_LESS_DASHCMD is not set
 # CONFIG_FEATURE_LESS_LINENUMS is not set
-# CONFIG_LSSCSI is not set
+CONFIG_LSSCSI=y
 CONFIG_MAKEDEVS=y
 # CONFIG_FEATURE_MAKEDEVS_LEAF is not set
 CONFIG_FEATURE_MAKEDEVS_TABLE=y
