Enable CONFIG_NET_NS in Kernel for systemd units with PrivateNetwork=yes.
For example systemd-hostnamed.service uses PrivateNetwork=yes.

--- a/recipes-kernel/linux/linux-mainline/network.cfg
+++ b/recipes-kernel/linux/linux-mainline/network.cfg
@@ -1,5 +1,7 @@
 # Remark: If possible, modules (=m) are used to reduce the boot time of the kernel.
 
+CONFIG_NET_NS=y
+
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
 CONFIG_PPP_DEFLATE=m
