Disable CONFIG_RTL8XXXU because CONFIG_RTL8192CU is used already.

--- a/recipes-kernel/linux/linux-mainline/wifi-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/wifi-devices.cfg
@@ -46,7 +46,7 @@ CONFIG_RTLWIFI=m
 CONFIG_RTLWIFI_USB=m
 CONFIG_RTLWIFI_DEBUG=y
 CONFIG_RTL8192C_COMMON=m
-CONFIG_RTL8XXXU=m
+# CONFIG_RTL8XXXU is not set
 # CONFIG_RTL8XXXU_UNTESTED is not set
 # CONFIG_RSI_91X is not set
 # CONFIG_CW1200 is not set
@@ -59,8 +59,6 @@ CONFIG_RTL8XXXU=m
 # CONFIG_MAC80211_HWSIM is not set
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_PRISM2_USB is not set
-# CONFIG_RTL8723BS is not set
 # CONFIG_R8188EU is not set
 # CONFIG_VT6656 is not set
-# CONFIG_WILC1000_SDIO is not set
 # CONFIG_WILC1000_SPI is not set
