Use x11vnc instead of Qt's own vnc server.
This allows us to keep the VNC server running indefinitely.
Furthermore, the screen on the is shown on the fbdev simultaneously.

--- a/recipes-kernel/linux/linux-mainline/virtual-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/virtual-devices.cfg
@@ -5,3 +5,7 @@ CONFIG_BLK_DEV_RAM_SIZE=524288
 
 # https://cateee.net/lkddb/web-lkddb/FRAMEBUFFER_CONSOLE_ROTATION.html
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
+
+# for x11vnc's -pipeinput 
+CONFIG_INPUT_MISC=y
+CONFIG_INPUT_UINPUT=m
