Stop x11vnc via SIGINT to have a exit code 0.

--- a/recipes-core/systemd/systemd-units/vnc-server.service
+++ b/recipes-core/systemd/systemd-units/vnc-server.service
@@ -4,3 +4,4 @@ Description=vnc-server
 [Service]
 Type=simple
 ExecStart=/usr/bin/x11vnc -forever -nocursor -rawfb /dev/fb0 -pipeinput UINPUT:direct_abs=/dev/input/event1
+KillSignal=SIGINT
