Added systemd target "check" which is placed between drive and communication.

--- a/recipes-core/systemd/systemd-units/ble-attach.service
+++ b/recipes-core/systemd/systemd-units/ble-attach.service
@@ -1,8 +1,8 @@
 [Unit]
 Description=ble
-After=dbus.service drive.target
+After=dbus.service check.target
 Requires=dbus.service
-Wants=drive.target
+Wants=check.target
 Before=bluetooth.service
 
 [Service]
