--- a/recipes-core/systemd/systemd-units/vnc-server.service
+++ b/recipes-core/systemd/systemd-units/vnc-server.service
@@ -5,7 +5,7 @@ Wants=communication.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/x11vnc -forever -nocursor -rawfb /dev/fb0 -pipeinput UINPUT:direct_abs=/dev/input/event1
+ExecStart=/usr/bin/x11vnc -forever -rawfb /dev/fb0 -pipeinput UINPUT:direct_abs=/dev/input/event1
 KillSignal=SIGINT
 
 [Install]
