Added support for dumping and converting CAN error frames.
The FlexCAN controller is able to report some erroneous conditions, so that
candump outputs "ERRORFRAMES" but seems not as picky as a PCAN USB adapter.
Nevertheless, error frames are now converted to (mostly "Other Error"
since Linux and PEAK's definitions differ) the PEAK CAN TRC file format.

--- a/recipes-core/systemd/systemd-units/candump.service
+++ b/recipes-core/systemd/systemd-units/candump.service
@@ -5,7 +5,7 @@ Requires=can0.service
 
 [Service]
 Type=simple
-ExecStart=/bin/dash -c '/usr/bin/candump can0 -t a | /usr/bin/multilog s10485760 n3 wcandump /tmp/candump'
+ExecStart=/bin/dash -c '/usr/bin/candump can0,0:0,#FFFFFFFF -t a | /usr/bin/multilog s10485760 n3 wcandump /tmp/candump'
 
 [Install]
 WantedBy=drive.target
