--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# Busybox version: 1.30.1
-# Fri Sep 13 14:12:07 2019
+# Busybox version: 1.31.0
+# Fri Nov 29 17:58:53 2019
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -34,6 +34,7 @@ CONFIG_FEATURE_SUID_CONFIG_QUIET=y
 CONFIG_BUSYBOX_EXEC_PATH="/proc/self/exe"
 # CONFIG_SELINUX is not set
 # CONFIG_FEATURE_CLEAN_UP is not set
+CONFIG_FEATURE_SYSLOG_INFO=y
 CONFIG_FEATURE_SYSLOG=y
 CONFIG_PLATFORM_LINUX=y
 
@@ -236,7 +237,6 @@ CONFIG_EXPR_MATH_SUPPORT_64=y
 CONFIG_FACTOR=y
 CONFIG_FALSE=y
 CONFIG_FOLD=y
-CONFIG_FSYNC=y
 CONFIG_HEAD=y
 CONFIG_FEATURE_FANCY_HEAD=y
 CONFIG_HOSTID=y
@@ -303,6 +303,7 @@ CONFIG_STTY=y
 CONFIG_SUM=y
 CONFIG_SYNC=y
 CONFIG_FEATURE_SYNC_FANCY=y
+CONFIG_FSYNC=y
 CONFIG_TAC=y
 CONFIG_TAIL=y
 CONFIG_FEATURE_FANCY_TAIL=y
@@ -639,6 +640,7 @@ CONFIG_LSUSB=y
 # CONFIG_FEATURE_MDEV_RENAME_REGEXP is not set
 # CONFIG_FEATURE_MDEV_EXEC is not set
 # CONFIG_FEATURE_MDEV_LOAD_FIRMWARE is not set
+# CONFIG_FEATURE_MDEV_DAEMON is not set
 CONFIG_MESG=y
 CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP=y
 # CONFIG_MKE2FS is not set
@@ -786,6 +788,7 @@ CONFIG_I2CGET=y
 CONFIG_I2CSET=y
 CONFIG_I2CDUMP=y
 CONFIG_I2CDETECT=y
+CONFIG_I2CTRANSFER=y
 # CONFIG_INOTIFYD is not set
 # CONFIG_LESS is not set
 CONFIG_FEATURE_LESS_MAXLINES=0
@@ -819,6 +822,7 @@ CONFIG_SETFATTR=y
 CONFIG_SETSERIAL=y
 CONFIG_STRINGS=y
 CONFIG_TIME=y
+CONFIG_TS=y
 CONFIG_TTYSIZE=y
 CONFIG_UBIATTACH=y
 CONFIG_UBIDETACH=y
@@ -946,6 +950,7 @@ CONFIG_FEATURE_TELNETD_STANDALONE=y
 CONFIG_FEATURE_TELNETD_INETD_WAIT=y
 CONFIG_TFTP=y
 CONFIG_FEATURE_TFTP_PROGRESS_BAR=y
+CONFIG_FEATURE_TFTP_HPA_COMPAT=y
 CONFIG_TFTPD=y
 CONFIG_FEATURE_TFTP_GET=y
 CONFIG_FEATURE_TFTP_PUT=y
@@ -988,7 +993,7 @@ CONFIG_UDHCPC_DEFAULT_SCRIPT=""
 # Common options for DHCP applets
 #
 # CONFIG_FEATURE_UDHCP_PORT is not set
-CONFIG_UDHCP_DEBUG=9
+CONFIG_UDHCP_DEBUG=2
 CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=0
 # CONFIG_FEATURE_UDHCP_RFC3397 is not set
 # CONFIG_FEATURE_UDHCP_8021Q is not set
@@ -1155,6 +1160,7 @@ CONFIG_BASH_IS_NONE=y
 #
 # CONFIG_FEATURE_SH_MATH is not set
 # CONFIG_FEATURE_SH_MATH_64 is not set
+# CONFIG_FEATURE_SH_MATH_BASE is not set
 # CONFIG_FEATURE_SH_EXTRA_QUIET is not set
 # CONFIG_FEATURE_SH_STANDALONE is not set
 # CONFIG_FEATURE_SH_NOFORK is not set
