--- a/recipes-kernel/linux/linux-mainline/virtual-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/virtual-devices.cfg
@@ -6,6 +6,9 @@ CONFIG_BLK_DEV_RAM_SIZE=524288
 # https://cateee.net/lkddb/web-lkddb/FRAMEBUFFER_CONSOLE_ROTATION.html
 CONFIG_FRAMEBUFFER_CONSOLE_ROTATION=y
 
+# https://cateee.net/lkddb/web-lkddb/N_GSM.html
+CONFIG_N_GSM=m
+
 # for x11vnc's -pipeinput 
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=m
