Adoptions for Sierra Wireless HL78xx support.

--- a/recipes-connectivity/wvdial/wvdial/wvdial.conf
+++ b/recipes-connectivity/wvdial/wvdial/wvdial.conf
@@ -18,3 +18,19 @@ PPPD Option = nodefaultroute
 Stupid Mode = 1
 Check DNS = 0
 Check Def Route = 0
+
+[Dialer hl78xx]
+Modem = /dev/gsmtty1
+Baud = 38400
+Init3 = AT+KGSN=2;+KGSN=3;+CGMI;+CGMM;+CGMR;I9
+Init4 = AT+CPIN?
+Init5 = AT+CIMI
+Init6 = AT+COPS?
+Init7 = AT+KBND?
+
+[Dialer hl78xx-usb]
+Init3 = AT+KGSN=2;+KGSN=3;+CGMI;+CGMM;+CGMR;I9
+Init4 = AT+CPIN?
+Init5 = AT+CIMI
+Init6 = AT+COPS?
+Init7 = AT+KBND?
