--- a/recipes-extended/rsyslog/rsyslog/rsyslog.conf
+++ b/recipes-extended/rsyslog/rsyslog/rsyslog.conf
@@ -34,46 +34,46 @@ module( load="builtin:omfile"
         dirCreateMode="0755"
 )
 
-set $.MEDUSA_VERSION_RAW = `cat /etc/medusa-version`;
-set $.MEDUSA_VERSION = replace($.MEDUSA_VERSION_RAW, '\n', "");
+#set $.MEDUSA_VERSION_RAW = `cat /etc/medusa-version`;
+#set $.MEDUSA_VERSION = replace($.MEDUSA_VERSION_RAW, '\n', "");
 
-template(name="system-template" type="list")
-{
-  constant(value="{")
-  constant(value="\"@timestamp\":\"")     property(name="timereported" dateFormat="rfc3339")
-  constant(value="\",\"@version\":\"1")
-  constant(value="\",\"message\":\"")     property(name="msg" format="json")
-  constant(value="\",\"sysloghost\":\"")  property(name="hostname")
-  constant(value="\",\"severity\":\"")    property(name="syslogseverity-text")
-  constant(value="\",\"facility\":\"")    property(name="syslogfacility-text")
-  constant(value="\",\"programname\":\"") property(name="programname")
-  constant(value="\",\"procid\":\"")      property(name="procid")
-  constant(value="\",\"firmware\":\"")    property(name="$.MEDUSA_VERSION")
-  constant(value="\"}\n")
-}
+#template(name="system-template" type="list")
+#{
+#  constant(value="{")
+#  constant(value="\"@timestamp\":\"")     property(name="timereported" dateFormat="rfc3339")
+#  constant(value="\",\"@version\":\"1")
+#  constant(value="\",\"message\":\"")     property(name="msg" format="json")
+#  constant(value="\",\"sysloghost\":\"")  property(name="hostname")
+#  constant(value="\",\"severity\":\"")    property(name="syslogseverity-text")
+#  constant(value="\",\"facility\":\"")    property(name="syslogfacility-text")
+#  constant(value="\",\"programname\":\"") property(name="programname")
+#  constant(value="\",\"procid\":\"")      property(name="procid")
+#  constant(value="\",\"firmware\":\"")    property(name="$.MEDUSA_VERSION")
+#  constant(value="\"}\n")
+#}
 
 #*.* /var/log/syslog
 
-*.warning { 
+#*.warning { 
     #action(type="omfile" file="/var/log/syslog2" template="system-template" queue.size="2000" queue.maxDiskSpace="4m")
 
-    action(
-      type="omfwd"
-      target="logging.stromerbike.com"
-      port="514"
-      protocol="tcp"
-      queue.filename="forwarding"
-      queue.size="1000"
-      queue.type="LinkedList"
-      queue.saveOnShutdown="on"
-      queue.maxFileSize="1m"
-      queue.spoolDirectory="/var/log"
-      queue.maxDiskSpace="4m"
-      template="system-template"
-    )
+#    action(
+#      type="omfwd"
+#      target="logging.stromerbike.com"
+#      port="514"
+#      protocol="tcp"
+#      queue.filename="forwarding"
+#      queue.size="1000"
+#      queue.type="LinkedList"
+#      queue.saveOnShutdown="on"
+#      queue.maxFileSize="1m"
+#      queue.spoolDirectory="/var/log"
+#      queue.maxDiskSpace="4m"
+#      template="system-template"
+#    )
 
-    stop
-}
+#    stop
+#}
 
 #*.* /var/log/syslog;system-template
 
@@ -151,3 +151,4 @@ template(name="system-template" type="list")
 #$ModLoad imudp.so  # provides UDP syslog reception
 #$UDPServerRun 514 # start a UDP syslog server at standard port 514
 
+$IncludeConfig /etc/rsyslog.d/*.conf
