Added support for HL7800 with FW 4.x.
As compared to FW 3.x, the bootloader USB VID/PID vanishes after it has booted
into USB mode (if it was configured with e.g. AT+KUSBCOMP=1,2,1,3).

--- a/recipes-core/systemd/systemd-units/ldattach-hl78xx.service
+++ b/recipes-core/systemd/systemd-units/ldattach-hl78xx.service
@@ -6,7 +6,4 @@ Wants=network.target
 
 [Service]
 Type=simple
-ExecStartPre=/bin/sleep 7
-ExecStartPre=/bin/dash -c '/bin/echo -e "AT+CMUX=0,0,7\r" | picocom -qr -b 115200 -f h -x 1000 /dev/ttymxc7'
-ExecStartPre=/sbin/modprobe n_gsm debug=0x2
-ExecStart=/usr/sbin/ldattach -d -8n1 -s 460800 GSM0710 /dev/ttymxc7
+ExecStart=/etc/scripts/ldattach-hl78xx.sh
