--- a/recipes-core/busybox/busybox/defconfig.cfg
+++ b/recipes-core/busybox/busybox/defconfig.cfg
@@ -633,7 +633,7 @@ CONFIG_LAST=y
 CONFIG_FEATURE_LAST_FANCY=y
 CONFIG_LOSETUP=y
 # CONFIG_LSPCI is not set
-CONFIG_LSUSB=y
+# CONFIG_LSUSB is not set
 # CONFIG_MDEV is not set
 # CONFIG_FEATURE_MDEV_CONF is not set
 # CONFIG_FEATURE_MDEV_RENAME is not set
