rsyslog: update configuration

--- a/recipes-extended/rsyslog/rsyslog/50-stromer.conf
+++ b/recipes-extended/rsyslog/rsyslog/50-stromer.conf
@@ -8,6 +8,10 @@ module(load="omhttp")
 set $.FIRMWARE_VERSION = `cat /etc/medusa-version`;
 set $.FIRMWARE_VERSION_TRUNC = replace($.FIRMWARE_VERSION, "\n", "");
 
+###
+## template(s) ...
+###
+
 template(name="medusa-template" type="list")
 {
   constant(value="{")
@@ -25,6 +29,10 @@ template(name="medusa-template" type="list")
 
 template(name="tpl_echo" type="string" string="%msg%")
 
+###
+## ruleset(s) ...
+###
+
 ruleset(name="rs_retry_forever") {
     action(
         type="omhttp"
@@ -32,29 +40,44 @@ ruleset(name="rs_retry_forever") {
         serverport="8080"
         restpath="events"
         template="tpl_echo"
-        batch="on"
-        batch.format="jsonarray"
-        batch.maxsize="10"
-        retry="off"
-        retry.ruleset="rs_retry_forever"
-        errorfile="/var/log/rsyslog_error.log"
-    )
-}
-
-if ($programname == 'EventLogServer' and prifilt("*.warning")) then {
-    ## uncomment for testing purposes
-    #action(type="omfile" file="/var/log/medusaEventLogServerRaw.log")
-    #action(type="omfile" file="/var/log/medusaEventLogServer.log" template="medusa-template")
-    ## stop
-
-    action(
-        type="omhttp"                
-        server="http://logging.stromerbike.com"
-        serverport="8080"
-        restpath="events"
-        template="medusa-template"
-        batch="off"
         retry="on"
         retry.ruleset="rs_retry_forever"
     )
 }
+
+ruleset(name="rs_stromer_logging") {
+    if ($programname == 'EventLogServer' and prifilt("*.warning")) then {
+        ## uncomment for testing purposes
+        #action(type="omfile" file="/var/log/medusaEventLogServerRaw.log")
+        #action(type="omfile" file="/var/log/medusaEventLogServer.log" template="medusa-template")
+        ## stop
+
+        action(
+            type="omhttp"                
+            server="http://logging.stromerbike.com"
+            serverport="8080"
+            restpath="events"
+            template="medusa-template"
+            batch="off"
+            retry="on"
+            retry.ruleset="rs_retry_forever"
+            queue.spoolDirectory="/mnt/data/rsyslog"
+            queue.filename="in_queue"
+            queue.size="100"
+            queue.maxDiskSpace="100k"
+            queue.type="LinkedList"
+            queue.saveOnShutdown="on"
+        )
+    }
+}
+
+###
+## input(s) ...
+###
+
+input(
+    type="imuxsock"
+    Socket="/run/systemd/journal/syslog"
+    Ruleset="rs_stromer_logging"
+)
+
