rsyslog: don't open journal socket twice

--- a/recipes-extended/rsyslog/rsyslog/50-stromer.conf
+++ b/recipes-extended/rsyslog/rsyslog/50-stromer.conf
@@ -45,7 +45,7 @@ ruleset(name="rs_retry_forever") {
     )
 }
 
-ruleset(name="rs_stromer_logging") {
+#ruleset(name="rs_stromer_logging") {
     if ($programname == 'EventLogServer' and prifilt("*.warning")) then {
         ## uncomment for testing purposes
         #action(type="omfile" file="/var/log/medusaEventLogServerRaw.log")
@@ -69,15 +69,16 @@ ruleset(name="rs_stromer_logging") {
             queue.saveOnShutdown="on"
         )
     }
-}
+#}
 
 ###
 ## input(s) ...
 ###
 
-input(
-    type="imuxsock"
-    Socket="/run/systemd/journal/syslog"
-    Ruleset="rs_stromer_logging"
-)
+## !!! don't call socket command twice (here and in rsyslog.conf) !!!
+#input(
+#    type="imuxsock"
+#    Socket="/run/systemd/journal/syslog"
+#    Ruleset="rs_stromer_logging"
+#)
 
