Added support for Kontron DM9601 based USB 1.1 Ethernet adapters.
They are cheap (2$) but work ok for some basic stuff like
ssh and no crashes were observed when copying files.

https://elinux.org/RPi_USB_Ethernet_adapters

--- a/recipes-kernel/linux/linux-mainline/usb-devices.cfg
+++ b/recipes-kernel/linux/linux-mainline/usb-devices.cfg
@@ -28,3 +28,7 @@ CONFIG_BT_HCIBTUSB_BCM=y
 # AX88xxx Based USB 2.0 Ethernet Adapters such as D-Link DUB-E100
 # http://cateee.net/lkddb/web-lkddb/USB_NET_AX8817X.html
 CONFIG_USB_NET_AX8817X=m
+
+# Davicom DM96xx based USB 10/100 ethernet devices
+# https://cateee.net/lkddb/web-lkddb/USB_NET_DM9601.html
+CONFIG_USB_NET_DM9601=m
